--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,11 @@
         <div id="liffAppContent">
             <!-- ACTION BUTTONS -->
             <div class="buttonGroup">
+
+                <div class="buttonRow">
+                    <button id="scanQRCodeButton">Scan QR Code</button>
+                </div>
+
                 <div class="buttonRow">
                     <button id="openWindowButton">Open External Window</button>
                     <button id="closeWindowButton">Close LIFF App</button>
